// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`templates > bolt-rifle > known-good seeds 1`] = `
[
  {
    "connections": [
      {
        "from": "receiver.lower",
        "to": "lower.top",
      },
      {
        "from": "receiver.barrel",
        "to": "barrel.rear",
      },
      {
        "from": "receiver.handguard",
        "to": "handguard.rear",
      },
      {
        "from": "handguard.front",
        "to": "barrel.clamp",
      },
      {
        "from": "lower.magazine",
        "to": "magazine.top",
      },
      {
        "from": "receiver.stock",
        "to": "stock.front",
      },
      {
        "from": "receiver.rail",
        "slot": 1,
        "to": "sight.base",
      },
    ],
    "description": "Generated from the "bolt-rifle" template with seed 100.",
    "name": "bolt-rifle-100",
    "parts": {
      "barrel": {
        "family": "barrel",
        "params": {
          "length": "M",
        },
      },
      "handguard": {
        "family": "handguard",
        "params": {
          "inner": "M",
        },
      },
      "lower": {
        "family": "lower",
        "params": {
          "layout": "conventional",
        },
      },
      "magazine": {
        "family": "magazine",
        "params": {
          "capacity": "S",
        },
      },
      "receiver": {
        "family": "receiver",
        "params": {
          "action": "bolt",
          "bore": "M",
          "feed": "top",
        },
      },
      "sight": {
        "family": "sight",
      },
      "stock": {
        "family": "stock",
        "params": {
          "length": "L",
          "style": "sporting",
        },
      },
    },
    "root": "receiver",
  },
  {
    "connections": [
      {
        "from": "receiver.lower",
        "to": "lower.top",
      },
      {
        "from": "receiver.barrel",
        "to": "barrel.rear",
      },
      {
        "from": "receiver.handguard",
        "to": "handguard.rear",
      },
      {
        "from": "lower.magazine",
        "to": "magazine.top",
      },
      {
        "from": "receiver.stock",
        "to": "stock.front",
      },
      {
        "from": "handguard.rail",
        "slot": 9,
        "to": "sight.base",
      },
    ],
    "description": "Generated from the "bolt-rifle" template with seed 200.",
    "name": "bolt-rifle-200",
    "parts": {
      "barrel": {
        "family": "barrel",
        "params": {
          "length": "L",
        },
      },
      "handguard": {
        "family": "handguard",
        "params": {
          "inner": "M",
        },
      },
      "lower": {
        "family": "lower",
        "params": {
          "layout": "conventional",
        },
      },
      "magazine": {
        "family": "magazine",
        "params": {
          "capacity": "S",
        },
      },
      "receiver": {
        "family": "receiver",
        "params": {
          "action": "bolt",
          "bore": "M",
          "feed": "top",
        },
      },
      "sight": {
        "family": "sight",
      },
      "stock": {
        "family": "stock",
        "params": {
          "length": "L",
          "style": "sporting",
        },
      },
    },
    "root": "receiver",
  },
  {
    "connections": [
      {
        "from": "receiver.lower",
        "to": "lower.top",
      },
      {
        "from": "receiver.barrel",
        "to": "barrel.rear",
      },
      {
        "from": "receiver.handguard",
        "to": "handguard.rear",
      },
      {
        "from": "lower.magazine",
        "to": "magazine.top",
      },
      {
        "from": "receiver.stock",
        "to": "stock.front",
      },
      {
        "from": "handguard.rail",
        "slot": 0,
        "to": "sight.base",
      },
    ],
    "description": "Generated from the "bolt-rifle" template with seed 300.",
    "name": "bolt-rifle-300",
    "parts": {
      "barrel": {
        "family": "barrel",
        "params": {
          "length": "M",
        },
      },
      "handguard": {
        "family": "handguard",
        "params": {
          "inner": "M",
        },
      },
      "lower": {
        "family": "lower",
        "params": {
          "layout": "conventional",
        },
      },
      "magazine": {
        "family": "magazine",
        "params": {
          "capacity": "S",
        },
      },
      "receiver": {
        "family": "receiver",
        "params": {
          "action": "bolt",
          "bore": "L",
          "feed": "top",
        },
      },
      "sight": {
        "family": "sight",
      },
      "stock": {
        "family": "stock",
        "params": {
          "length": "L",
          "style": "sporting",
        },
      },
    },
    "root": "receiver",
  },
]
`;

exports[`templates > bolt-rifle-box > known-good seeds 1`] = `
[
  {
    "connections": [
      {
        "from": "receiver.lower",
        "to": "lower.top",
      },
      {
        "from": "receiver.barrel",
        "to": "barrel.rear",
      },
      {
        "from": "receiver.handguard",
        "to": "handguard.rear",
      },
      {
        "from": "lower.grip",
        "to": "grip.top",
      },
      {
        "from": "lower.magazine",
        "to": "magazine.top",
      },
      {
        "from": "receiver.stock",
        "to": "stock.front",
      },
      {
        "from": "receiver.rail",
        "slot": 6,
        "to": "sight.base",
      },
    ],
    "description": "Generated from the "bolt-rifle-box" template with seed 100.",
    "name": "bolt-rifle-box-100",
    "parts": {
      "barrel": {
        "family": "barrel",
        "params": {
          "length": "M",
        },
      },
      "grip": {
        "family": "grip",
        "params": {
          "length": "L",
        },
      },
      "handguard": {
        "family": "handguard",
        "params": {
          "inner": "M",
          "length": "L",
        },
      },
      "lower": {
        "family": "lower",
        "params": {
          "layout": "conventional",
        },
      },
      "magazine": {
        "family": "magazine",
        "params": {
          "capacity": "M",
        },
      },
      "receiver": {
        "family": "receiver",
        "params": {
          "action": "bolt",
          "bore": "M",
          "feed": "box",
        },
      },
      "sight": {
        "family": "sight",
      },
      "stock": {
        "family": "stock",
        "params": {
          "length": "M",
          "style": "sporting",
        },
      },
    },
    "root": "receiver",
  },
  {
    "connections": [
      {
        "from": "receiver.lower",
        "to": "lower.top",
      },
      {
        "from": "receiver.barrel",
        "to": "barrel.rear",
      },
      {
        "from": "receiver.handguard",
        "to": "handguard.rear",
      },
      {
        "from": "lower.grip",
        "to": "grip.top",
      },
      {
        "from": "lower.magazine",
        "to": "magazine.top",
      },
      {
        "from": "receiver.stock",
        "to": "stock.front",
      },
      {
        "from": "receiver.rail",
        "slot": 6,
        "to": "sight.base",
      },
    ],
    "description": "Generated from the "bolt-rifle-box" template with seed 200.",
    "name": "bolt-rifle-box-200",
    "parts": {
      "barrel": {
        "family": "barrel",
        "params": {
          "length": "L",
        },
      },
      "grip": {
        "family": "grip",
        "params": {
          "length": "L",
        },
      },
      "handguard": {
        "family": "handguard",
        "params": {
          "inner": "M",
          "length": "L",
        },
      },
      "lower": {
        "family": "lower",
        "params": {
          "layout": "conventional",
        },
      },
      "magazine": {
        "family": "magazine",
        "params": {
          "capacity": "S",
        },
      },
      "receiver": {
        "family": "receiver",
        "params": {
          "action": "bolt",
          "bore": "M",
          "feed": "box",
        },
      },
      "sight": {
        "family": "sight",
      },
      "stock": {
        "family": "stock",
        "params": {
          "length": "L",
          "style": "sporting",
        },
      },
    },
    "root": "receiver",
  },
  {
    "connections": [
      {
        "from": "receiver.lower",
        "to": "lower.top",
      },
      {
        "from": "receiver.barrel",
        "to": "barrel.rear",
      },
      {
        "from": "lower.grip",
        "to": "grip.top",
      },
      {
        "from": "lower.magazine",
        "to": "magazine.top",
      },
      {
        "from": "receiver.stock",
        "to": "stock.front",
      },
      {
        "from": "receiver.rail",
        "slot": 3,
        "to": "sight.base",
      },
    ],
    "description": "Generated from the "bolt-rifle-box" template with seed 300.",
    "name": "bolt-rifle-box-300",
    "parts": {
      "barrel": {
        "family": "barrel",
        "params": {
          "length": "M",
        },
      },
      "grip": {
        "family": "grip",
        "params": {
          "length": "L",
        },
      },
      "lower": {
        "family": "lower",
        "params": {
          "layout": "conventional",
        },
      },
      "magazine": {
        "family": "magazine",
        "params": {
          "capacity": "S",
        },
      },
      "receiver": {
        "family": "receiver",
        "params": {
          "action": "bolt",
          "bore": "L",
          "feed": "box",
        },
      },
      "sight": {
        "family": "sight",
      },
      "stock": {
        "family": "stock",
        "params": {
          "length": "L",
          "style": "sporting",
        },
      },
    },
    "root": "receiver",
  },
]
`;

exports[`templates > bullpup > known-good seeds 1`] = `
[
  {
    "connections": [
      {
        "from": "receiver.lower",
        "to": "lower.top",
      },
      {
        "from": "receiver.barrel",
        "to": "barrel.rear",
      },
      {
        "from": "lower.grip",
        "to": "grip.top",
      },
      {
        "from": "lower.magazine",
        "to": "magazine.top",
      },
      {
        "from": "receiver.rail",
        "slot": 4,
        "to": "sight.base",
      },
    ],
    "description": "Generated from the "bullpup" template with seed 100.",
    "name": "bullpup-100",
    "parts": {
      "barrel": {
        "family": "barrel",
        "params": {
          "length": "S",
        },
      },
      "grip": {
        "family": "grip",
        "params": {
          "length": "L",
        },
      },
      "lower": {
        "family": "lower",
        "params": {
          "layout": "bullpup",
        },
      },
      "magazine": {
        "family": "magazine",
        "params": {
          "capacity": "L",
        },
      },
      "receiver": {
        "family": "receiver",
        "params": {
          "action": "auto",
          "bore": "M",
          "feed": "box",
        },
      },
      "sight": {
        "family": "sight",
      },
    },
    "root": "receiver",
  },
  {
    "connections": [
      {
        "from": "receiver.lower",
        "to": "lower.top",
      },
      {
        "from": "receiver.barrel",
        "to": "barrel.rear",
      },
      {
        "from": "lower.grip",
        "to": "grip.top",
      },
      {
        "from": "lower.magazine",
        "to": "magazine.top",
      },
      {
        "from": "receiver.rail",
        "slot": 6,
        "to": "sight.base",
      },
    ],
    "description": "Generated from the "bullpup" template with seed 200.",
    "name": "bullpup-200",
    "parts": {
      "barrel": {
        "family": "barrel",
        "params": {
          "length": "S",
        },
      },
      "grip": {
        "family": "grip",
        "params": {
          "length": "M",
        },
      },
      "lower": {
        "family": "lower",
        "params": {
          "layout": "bullpup",
        },
      },
      "magazine": {
        "family": "magazine",
        "params": {
          "capacity": "L",
        },
      },
      "receiver": {
        "family": "receiver",
        "params": {
          "action": "auto",
          "bore": "M",
          "feed": "box",
        },
      },
      "sight": {
        "family": "sight",
      },
    },
    "root": "receiver",
  },
  {
    "connections": [
      {
        "from": "receiver.lower",
        "to": "lower.top",
      },
      {
        "from": "receiver.barrel",
        "to": "barrel.rear",
      },
      {
        "from": "receiver.handguard",
        "to": "handguard.rear",
      },
      {
        "from": "handguard.front",
        "to": "barrel.clamp",
      },
      {
        "from": "lower.grip",
        "to": "grip.top",
      },
      {
        "from": "lower.magazine",
        "to": "magazine.top",
      },
      {
        "from": "handguard.rail",
        "slot": 0,
        "to": "sight.base",
      },
    ],
    "description": "Generated from the "bullpup" template with seed 300.",
    "name": "bullpup-300",
    "parts": {
      "barrel": {
        "family": "barrel",
        "params": {
          "length": "L",
        },
      },
      "grip": {
        "family": "grip",
        "params": {
          "length": "L",
        },
      },
      "handguard": {
        "family": "handguard",
        "params": {
          "inner": "M",
        },
      },
      "lower": {
        "family": "lower",
        "params": {
          "layout": "bullpup",
        },
      },
      "magazine": {
        "family": "magazine",
        "params": {
          "capacity": "L",
        },
      },
      "receiver": {
        "family": "receiver",
        "params": {
          "action": "auto",
          "bore": "M",
          "feed": "box",
        },
      },
      "sight": {
        "family": "sight",
      },
    },
    "root": "receiver",
  },
]
`;

exports[`templates > pump-shotgun > known-good seeds 1`] = `
[
  {
    "connections": [
      {
        "from": "receiver.lower",
        "to": "lower.top",
      },
      {
        "from": "receiver.barrel",
        "to": "barrel.rear",
      },
      {
        "from": "receiver.tube",
        "to": "tube.rear",
      },
      {
        "from": "tube.cap",
        "to": "barrel.lug",
      },
      {
        "from": "tube.forend",
        "to": "forend.rear",
      },
      {
        "from": "receiver.stock",
        "to": "stock.front",
      },
    ],
    "description": "Generated from the "pump-shotgun" template with seed 100.",
    "name": "pump-shotgun-100",
    "parts": {
      "barrel": {
        "family": "barrel",
        "params": {
          "length": "S",
        },
      },
      "forend": {
        "family": "forend",
      },
      "lower": {
        "family": "lower",
        "params": {
          "layout": "trigger",
        },
      },
      "receiver": {
        "family": "receiver",
        "params": {
          "action": "pump",
          "bore": "L",
          "feed": "tube",
        },
      },
      "stock": {
        "family": "stock",
        "params": {
          "length": "S",
          "style": "sporting",
        },
      },
      "tube": {
        "family": "tube-magazine",
      },
    },
    "root": "receiver",
  },
  {
    "connections": [
      {
        "from": "receiver.lower",
        "to": "lower.top",
      },
      {
        "from": "receiver.barrel",
        "to": "barrel.rear",
      },
      {
        "from": "receiver.tube",
        "to": "tube.rear",
      },
      {
        "from": "tube.cap",
        "to": "barrel.lug",
      },
      {
        "from": "tube.forend",
        "to": "forend.rear",
      },
      {
        "from": "receiver.stock",
        "to": "stock.front",
      },
    ],
    "description": "Generated from the "pump-shotgun" template with seed 200.",
    "name": "pump-shotgun-200",
    "parts": {
      "barrel": {
        "family": "barrel",
        "params": {
          "length": "S",
        },
      },
      "forend": {
        "family": "forend",
      },
      "lower": {
        "family": "lower",
        "params": {
          "layout": "trigger",
        },
      },
      "receiver": {
        "family": "receiver",
        "params": {
          "action": "pump",
          "bore": "L",
          "feed": "tube",
        },
      },
      "stock": {
        "family": "stock",
        "params": {
          "length": "M",
          "style": "sporting",
        },
      },
      "tube": {
        "family": "tube-magazine",
      },
    },
    "root": "receiver",
  },
  {
    "connections": [
      {
        "from": "receiver.lower",
        "to": "lower.top",
      },
      {
        "from": "receiver.barrel",
        "to": "barrel.rear",
      },
      {
        "from": "receiver.tube",
        "to": "tube.rear",
      },
      {
        "from": "tube.cap",
        "to": "barrel.lug",
      },
      {
        "from": "tube.forend",
        "to": "forend.rear",
      },
      {
        "from": "receiver.stock",
        "to": "stock.front",
      },
    ],
    "description": "Generated from the "pump-shotgun" template with seed 300.",
    "name": "pump-shotgun-300",
    "parts": {
      "barrel": {
        "family": "barrel",
        "params": {
          "length": "L",
        },
      },
      "forend": {
        "family": "forend",
      },
      "lower": {
        "family": "lower",
        "params": {
          "layout": "trigger",
        },
      },
      "receiver": {
        "family": "receiver",
        "params": {
          "action": "pump",
          "bore": "L",
          "feed": "tube",
        },
      },
      "stock": {
        "family": "stock",
        "params": {
          "length": "S",
          "style": "sporting",
        },
      },
      "tube": {
        "family": "tube-magazine",
      },
    },
    "root": "receiver",
  },
]
`;

exports[`templates > rifle > known-good seeds 1`] = `
[
  {
    "connections": [
      {
        "from": "receiver.lower",
        "to": "lower.top",
      },
      {
        "from": "receiver.barrel",
        "to": "barrel.rear",
      },
      {
        "from": "receiver.handguard",
        "to": "handguard.rear",
      },
      {
        "from": "handguard.front",
        "to": "barrel.clamp",
      },
      {
        "from": "lower.grip",
        "to": "grip.top",
      },
      {
        "from": "lower.magazine",
        "to": "magazine.top",
      },
      {
        "from": "receiver.stock",
        "to": "stock.front",
      },
      {
        "from": "handguard.rail",
        "slot": 1,
        "to": "sight.base",
      },
    ],
    "description": "Generated from the "rifle" template with seed 100.",
    "name": "rifle-100",
    "parts": {
      "barrel": {
        "family": "barrel",
        "params": {
          "length": "S",
        },
      },
      "grip": {
        "family": "grip",
        "params": {
          "length": "M",
        },
      },
      "handguard": {
        "family": "handguard",
        "params": {
          "inner": "L",
        },
      },
      "lower": {
        "family": "lower",
        "params": {
          "layout": "conventional",
        },
      },
      "magazine": {
        "family": "magazine",
        "params": {
          "capacity": "L",
        },
      },
      "receiver": {
        "family": "receiver",
        "params": {
          "action": "auto",
          "bore": "M",
          "feed": "box",
        },
      },
      "sight": {
        "family": "sight",
      },
      "stock": {
        "family": "stock",
        "params": {
          "length": "M",
          "style": "straight",
        },
      },
    },
    "root": "receiver",
  },
  {
    "connections": [
      {
        "from": "receiver.lower",
        "to": "lower.top",
      },
      {
        "from": "receiver.barrel",
        "to": "barrel.rear",
      },
      {
        "from": "receiver.handguard",
        "to": "handguard.rear",
      },
      {
        "from": "lower.grip",
        "to": "grip.top",
      },
      {
        "from": "lower.magazine",
        "to": "magazine.top",
      },
      {
        "from": "handguard.rail",
        "slot": 10,
        "to": "sight.base",
      },
    ],
    "description": "Generated from the "rifle" template with seed 200.",
    "name": "rifle-200",
    "parts": {
      "barrel": {
        "family": "barrel",
        "params": {
          "length": "M",
        },
      },
      "grip": {
        "family": "grip",
        "params": {
          "length": "L",
        },
      },
      "handguard": {
        "family": "handguard",
        "params": {
          "inner": "L",
        },
      },
      "lower": {
        "family": "lower",
        "params": {
          "layout": "conventional",
        },
      },
      "magazine": {
        "family": "magazine",
        "params": {
          "capacity": "M",
        },
      },
      "receiver": {
        "family": "receiver",
        "params": {
          "action": "auto",
          "bore": "M",
          "feed": "box",
        },
      },
      "sight": {
        "family": "sight",
      },
    },
    "root": "receiver",
  },
  {
    "connections": [
      {
        "from": "receiver.lower",
        "to": "lower.top",
      },
      {
        "from": "receiver.barrel",
        "to": "barrel.rear",
      },
      {
        "from": "receiver.handguard",
        "to": "handguard.rear",
      },
      {
        "from": "handguard.front",
        "to": "barrel.clamp",
      },
      {
        "from": "lower.grip",
        "to": "grip.top",
      },
      {
        "from": "lower.magazine",
        "to": "magazine.top",
      },
      {
        "from": "receiver.stock",
        "to": "stock.front",
      },
    ],
    "description": "Generated from the "rifle" template with seed 300.",
    "name": "rifle-300",
    "parts": {
      "barrel": {
        "family": "barrel",
        "params": {
          "length": "S",
        },
      },
      "grip": {
        "family": "grip",
        "params": {
          "length": "S",
        },
      },
      "handguard": {
        "family": "handguard",
        "params": {
          "inner": "L",
        },
      },
      "lower": {
        "family": "lower",
        "params": {
          "layout": "conventional",
        },
      },
      "magazine": {
        "family": "magazine",
        "params": {
          "capacity": "L",
        },
      },
      "receiver": {
        "family": "receiver",
        "params": {
          "action": "auto",
          "bore": "L",
          "feed": "box",
        },
      },
      "stock": {
        "family": "stock",
        "params": {
          "length": "M",
          "style": "straight",
        },
      },
    },
    "root": "receiver",
  },
]
`;

exports[`templates > smg > known-good seeds 1`] = `
[
  {
    "connections": [
      {
        "from": "receiver.lower",
        "to": "lower.top",
      },
      {
        "from": "receiver.barrel",
        "to": "barrel.rear",
      },
      {
        "from": "receiver.handguard",
        "to": "handguard.rear",
      },
      {
        "from": "handguard.front",
        "to": "barrel.clamp",
      },
      {
        "from": "lower.grip",
        "to": "grip.top",
      },
      {
        "from": "lower.magazine",
        "to": "magazine.top",
      },
      {
        "from": "receiver.stock",
        "to": "stock.front",
      },
      {
        "from": "receiver.rail",
        "slot": 0,
        "to": "sight.base",
      },
    ],
    "description": "Generated from the "smg" template with seed 100.",
    "name": "smg-100",
    "parts": {
      "barrel": {
        "family": "barrel",
        "params": {
          "length": "S",
        },
      },
      "grip": {
        "family": "grip",
        "params": {
          "length": "M",
        },
      },
      "handguard": {
        "family": "handguard",
        "params": {
          "inner": "M",
        },
      },
      "lower": {
        "family": "lower",
        "params": {
          "layout": "conventional",
        },
      },
      "magazine": {
        "family": "magazine",
        "params": {
          "capacity": "L",
        },
      },
      "receiver": {
        "family": "receiver",
        "params": {
          "action": "auto",
          "bore": "S",
          "feed": "box",
        },
      },
      "sight": {
        "family": "sight",
      },
      "stock": {
        "family": "stock",
        "params": {
          "length": "M",
          "style": "straight",
        },
      },
    },
    "root": "receiver",
  },
  {
    "connections": [
      {
        "from": "receiver.lower",
        "to": "lower.top",
      },
      {
        "from": "receiver.barrel",
        "to": "barrel.rear",
      },
      {
        "from": "receiver.handguard",
        "to": "handguard.rear",
      },
      {
        "from": "handguard.front",
        "to": "barrel.clamp",
      },
      {
        "from": "lower.grip",
        "to": "grip.top",
      },
      {
        "from": "lower.magazine",
        "to": "magazine.top",
      },
      {
        "from": "receiver.rail",
        "slot": 6,
        "to": "sight.base",
      },
    ],
    "description": "Generated from the "smg" template with seed 200.",
    "name": "smg-200",
    "parts": {
      "barrel": {
        "family": "barrel",
        "params": {
          "length": "S",
        },
      },
      "grip": {
        "family": "grip",
        "params": {
          "length": "S",
        },
      },
      "handguard": {
        "family": "handguard",
        "params": {
          "inner": "M",
        },
      },
      "lower": {
        "family": "lower",
        "params": {
          "layout": "conventional",
        },
      },
      "magazine": {
        "family": "magazine",
        "params": {
          "capacity": "L",
        },
      },
      "receiver": {
        "family": "receiver",
        "params": {
          "action": "auto",
          "bore": "S",
          "feed": "box",
        },
      },
      "sight": {
        "family": "sight",
      },
    },
    "root": "receiver",
  },
  {
    "connections": [
      {
        "from": "receiver.lower",
        "to": "lower.top",
      },
      {
        "from": "receiver.barrel",
        "to": "barrel.rear",
      },
      {
        "from": "receiver.handguard",
        "to": "handguard.rear",
      },
      {
        "from": "handguard.front",
        "to": "barrel.clamp",
      },
      {
        "from": "lower.grip",
        "to": "grip.top",
      },
      {
        "from": "lower.magazine",
        "to": "magazine.top",
      },
      {
        "from": "receiver.stock",
        "to": "stock.front",
      },
      {
        "from": "receiver.rail",
        "slot": 2,
        "to": "sight.base",
      },
    ],
    "description": "Generated from the "smg" template with seed 300.",
    "name": "smg-300",
    "parts": {
      "barrel": {
        "family": "barrel",
        "params": {
          "length": "M",
        },
      },
      "grip": {
        "family": "grip",
        "params": {
          "length": "M",
        },
      },
      "handguard": {
        "family": "handguard",
        "params": {
          "inner": "M",
        },
      },
      "lower": {
        "family": "lower",
        "params": {
          "layout": "conventional",
        },
      },
      "magazine": {
        "family": "magazine",
        "params": {
          "capacity": "L",
        },
      },
      "receiver": {
        "family": "receiver",
        "params": {
          "action": "auto",
          "bore": "S",
          "feed": "box",
        },
      },
      "sight": {
        "family": "sight",
      },
      "stock": {
        "family": "stock",
        "params": {
          "length": "M",
          "style": "straight",
        },
      },
    },
    "root": "receiver",
  },
]
`;
